@@ -1,3 +1,8 @@
+2011-11-06  Jason Merrill  <jason@redhat.com>
+
+	PR c++/35688
+	* g++.dg/ext/visibility/template7.C: New.
+
 2011-11-07  Terry Guo  <terry.guo@arm.com>
 
 	* gcc.target/arm/wmul-1.c: Adjust optimization level.
